fixed the example switch css. Prevent switch width collapse by setting the grid columns to a fixed with. The columns are set to 18px, which is the same width as the toggle indicator.

--- a/packages/Switch/src/styles.css
+++ b/packages/Switch/src/styles.css
@@ -14,7 +14,7 @@
     border-radius: 40px;
     background-color: #bdc3c7;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 18px);
     padding: 2px;
     margin-right: 14px;
 }
